--- a/src/Notebooks/fourthNotebook.ipynb
+++ b/src/Notebooks/fourthNotebook.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "#Imports\n",
     "import pandas as pd\n",
-    "import seaborn as sns;\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import os"
    ],
