Push de la merde

--- a/src/Notebooks/OlistData.ipynb
+++ b/src/Notebooks/OlistData.ipynb
@@ -63,6 +63,248 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_olist_orders"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_olist_orders['order_status'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_olist_orders['order_status'].plot.pie"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Situation Géographique"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_olist_geolocation['geolocation_zip_code_prefix'].value_counts().to_frame().describe()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "geo = pd.read_csv('../../data/olist_geolocation_dataset.csv', dtype={'geolocation_zip_code_prefix': str})\n",
+    "# Removing some outliers\n",
+    "#Brazils most Northern spot is at 5 deg 16′ 27.8″ N latitude.;\n",
+    "geo = geo[geo.geolocation_lat <= 5.27438888]\n",
+    "#it’s most Western spot is at 73 deg, 58′ 58.19″W Long.\n",
+    "geo = geo[geo.geolocation_lng >= -73.98283055]\n",
+    "#It’s most southern spot is at 33 deg, 45′ 04.21″ S Latitude.\n",
+    "geo = geo[geo.geolocation_lat >= -33.75116944]\n",
+    "#It’s most Eastern spot is 34 deg, 47′ 35.33″ W Long.\n",
+    "geo = geo[geo.geolocation_lng <=  -34.79314722]\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from datashader.utils import lnglat_to_meters as webm\n",
+    "x, y = webm(geo.geolocation_lng, geo.geolocation_lat)\n",
+    "geo['x'] = pd.Series(x)\n",
+    "geo['y'] = pd.Series(y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "geo.head(3)\n",
+    "geo['geolocation_zip_code_prefix_1_digits'] = geo['geolocation_zip_code_prefix'].str[0:1]\n",
+    "geo['geolocation_zip_code_prefix_2_digits'] = geo['geolocation_zip_code_prefix'].str[0:2]\n",
+    "geo['geolocation_zip_code_prefix_3_digits'] = geo['geolocation_zip_code_prefix'].str[0:3]\n",
+    "geo['geolocation_zip_code_prefix_4_digits'] = geo['geolocation_zip_code_prefix'].str[0:4]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# transforming the prefixes to int for plotting purposes\n",
+    "geo['geolocation_zip_code_prefix'] = geo['geolocation_zip_code_prefix'].astype(int)\n",
+    "geo['geolocation_zip_code_prefix_1_digits'] = geo['geolocation_zip_code_prefix_1_digits'].astype(int)\n",
+    "geo['geolocation_zip_code_prefix_2_digits'] = geo['geolocation_zip_code_prefix_2_digits'].astype(int)\n",
+    "geo['geolocation_zip_code_prefix_3_digits'] = geo['geolocation_zip_code_prefix_3_digits'].astype(int)\n",
+    "geo['geolocation_zip_code_prefix_4_digits'] = geo['geolocation_zip_code_prefix_4_digits'].astype(int)\n",
+    "\n",
+    "brazil = geo\n",
+    "agg_name = 'geolocation_zip_code_prefix'\n",
+    "brazil[agg_name].describe().to_frame()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# plot wtih holoviews + datashader - bokeh with map background\n",
+    "import holoviews as hv\n",
+    "import geoviews as gv\n",
+    "import datashader as ds\n",
+    "from colorcet import fire, rainbow, bgy, bjy, bkr, kb, kr\n",
+    "from datashader.colors import colormap_select, Greys9\n",
+    "from holoviews.streams import RangeXY\n",
+    "from holoviews.operation.datashader import datashade, dynspread, rasterize\n",
+    "from bokeh.io import push_notebook, show, output_notebook\n",
+    "output_notebook()\n",
+    "hv.extension('bokeh')\n",
+    "\n",
+    "%opts Overlay [width=800 height=600 toolbar='above' xaxis=None yaxis=None]\n",
+    "%opts QuadMesh [tools=['hover'] colorbar=True] (alpha=0 hover_alpha=0.2)\n",
+    "\n",
+    "T = 0.05\n",
+    "PX = 1\n",
+    "\n",
+    "def plot_map(data, label, agg_data, agg_name, cmap):\n",
+    "    url=\"http://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Dark_Gray_Base/MapServer/tile/{Z}/{Y}/{X}.png\"\n",
+    "    geomap = gv.WMTS(url)\n",
+    "    points = hv.Points(gv.Dataset(data, kdims=['x', 'y'], vdims=[agg_name]))\n",
+    "    agg = datashade(points, element_type=gv.Image, aggregator=agg_data, cmap=cmap)\n",
+    "    zip_codes = dynspread(agg, threshold=T, max_px=PX)\n",
+    "    hover = hv.util.Dynamic(rasterize(points, aggregator=agg_data, width=50, height=25, streams=[RangeXY]), operation=hv.QuadMesh)\n",
+    "    hover = hover.options(cmap=cmap)\n",
+    "    img = geomap * zip_codes * hover\n",
+    "    img = img.relabel(label)\n",
+    "    return img"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plot_map(brazil, 'Zip Codes in Brazil', ds.min(agg_name), agg_name, cmap=rainbow)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Les villes qui commandent le plus"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "# test= get_dummies(df_olist_geolocation, 'geolocation_state', ['SP', 'MG', 'RJ', 'RS', 'PR', 'SC', 'BA', 'GO', 'ES', 'PE',\n",
+    "#                                                               'DF', 'MT', 'CE', ''])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "outputs": [
     {
@@ -76,7 +318,8 @@
     }
    ],
    "source": [
-    "df_olist_orders"
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
